feat: price analysis
